issues/71: minor surefire fix